# thermo

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .ruff.toml  .travis.yml  AUTHORS  Justfile  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  asv.conf.json  changelog.md  conftest.py  environment.yml  mypy.ini  pylint  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_security.txt  requirements_test.txt  requirements_test_multiarch.txt  setup.py
.github/workflows/: build-multiarch.yaml  build-multiarch.yml  build.yml  build_cxfreeze_library.yml  build_multi_numpy_scipy.yml  build_nuitka_library.yml  build_py2exe_library.yml  build_pyinstaller_library.yml  build_third_party_packagers.yml  pre-commit.yml  publish-pypi.yml  publish-testpypi.yml  quality.yml  security.yml
_custom_build/: backend.py
benchmarks/: benchmarks.py
dev/: ChemSep8.26.xml  ChemSep8.32.xml  Use of 300,000 pseudo-experimental data over 1800 pure fluids to assess the performance of four cubic equations of state parameters.xlsx  basic_standalone_thermo_check.py  cx_freeze_basic_standalone_check_builder.py  debug_mu.py  dump_UNIFAC_assignments_to_sqlite.py  dump_chemsep_model_parameters.py  dump_eppr78_parameters.py  dump_twu_2021.py  dump_twu_Ian_Bell_2018.py  je7b00967_si_001.xlsx  prerelease.py  py2exe_basic_standalone_check_builder.py  pyinstaller_basic_standalone_check.spec
dev/activity_fitting/: util.py
dev/cx_freeze/: constraints.txt  cx_freeze_basic_standalone_check_builder.py
dev/pyinstaller/: pyinstaller_basic_standalone_check.spec
docs/: GibbsExcessLiquid_details.rst  activity_coefficients.rst  chemical_package_tutorial.rst  conf.py  cubic_equations_of_state.rst  examples.rst  index.rst  modules.rst  nomenclature.txt  property_objects.rst  robots.txt  test_documentation.py  thermo.acentric.rst  thermo.activity.rst  thermo.bulk.rst  thermo.chemical.rst  thermo.chemical_package.rst  thermo.combustion.rst  thermo.critical.rst  thermo.datasheet.rst  thermo.dipole.rst  thermo.dippr.rst  thermo.electrochem.rst  thermo.elements.rst  thermo.environment.rst  thermo.eos.rst  thermo.eos_alpha_functions.rst  thermo.eos_mix.rst  thermo.eos_mix_methods.rst  thermo.eos_volume.rst  thermo.equilibrium.rst  thermo.flash.rst  thermo.functional_groups.rst  thermo.group_contribution.bondi.rst  thermo.group_contribution.fedors.rst  thermo.group_contribution.joback.rst  thermo.group_contribution.wilson_jasperson.rst  thermo.heat_capacity.rst  thermo.identifiers.rst  thermo.interaction_parameters.rst  (+33 more)
docs/Examples/: Creating Nitrogen, oxygen, and nitrogen ternary air system phase envelope.ipynb  Creating Txy, Pxy, and xy diagrams for the binary water ethanol system with Modified UNIFAC (Dortmund).ipynb  Example 14.5 Pressure Relief - unfinished.ipynb  High Molecular Weight Petroleum Pseudocomponents.ipynb  Performing Large Numbers of Calculations with Thermo in Parallel.ipynb  Problem 14.03 Reversible and Isothermal Compression of Liquid Water.ipynb  Problem 14.08 Required Compressor Power for Isothermal and Adiabatic Compression of a Gas Mixture (CO2, O2) Using the Ideal Gas Law.ipynb  Problem 14.09 Temperature Change Upon Ethylene Expansion in Throttle Valves Using a High Precision EOS.ipynb  Problem 14.12 Work and Temperature Change Upon Adiabatic Compression of Oxygen.ipynb  Problem 14.13 Thermodynamic Cycle Calculation Using a High-Precision EOS.ipynb  Problem 14.15 Joule-Thomson Coefficient for Methane Using the Peng-Robinson EOS.ipynb  Validating Flash Calculations.ipynb  Working with Heat Transfer Fluids - Therminol LT.ipynb
docs/_static/: copybutton.js
docs/_templates/: layout.html
docs/plots/: PRTC_PT_surface_special.py  PRTC_volume_error.py  PR_maximum_pressure.py  SRK_H_dep.py  SRK_Psat_error.py  SRK_a_alpha.py  SRK_fugacity.py  vapor_pressure_ethanol_1.py  vapor_pressure_ethanol_2.py  vapor_pressure_ethanol_3.py  vapor_pressure_ethanol_4.py  vapor_pressure_ethanol_5.py  vapor_pressure_ethanol_6.py  viscosity_water_0.py  viscosity_water_1.py  viscosity_water_2.py
tests/: test_acentric.py  test_activity.py  test_bondi.py  test_chemical.py  test_chemical_package.py  test_chemical_utils.py  test_combustion.py  test_coolprop.py  test_critical.py  test_datasheet.py  test_dipole.py  test_dippr.py  test_doctests.py  test_documentation.py  test_electrochem.py  test_elements.py  test_environment.py  test_eos.py  test_eos_mix.py  test_eos_mix_methods.py  test_eos_pkg_pure.py  test_eos_volume.py  test_equilibrium.py  test_fedors.py  test_fitting.py  test_flash_basic.py  test_flash_coolprop.py  test_flash_dry_air.py  test_flash_iapws.py  test_flash_mixing_phase_boundary.py  test_flash_phase_boundary.py  test_flash_pure.py  test_flash_pure_virial.py  test_flash_vl.py  test_flash_vll.py  test_flashes.py  test_functional_groups.py  test_general.py  test_heat_capacity.py  test_hydrate.py  (+48 more)
tests/Data/: EPPR_known_fraagmentations.csv  MOSCED_DDB.csv  MOSCED_error.csv  MOSCED_local.csv  chemsep1.xml  mosced_compounds.txt
thermo/: __init__.py  acentric.py  activity.py  alpha_functions.py  base.py  bulk.py  chemical.py  chemical_package.py  chemical_utils.py  combustion.py  coolprop.py  critical.py  database.py  datasheet.py  dipole.py  dippr.py  electrochem.py  elements.py  environment.py  eos.py  eos_alpha_functions.py  eos_mix.py  eos_mix_methods.py  eos_volume.py  equilibrium.py  fitting.py  flash.py  flash_basic.py  functional_groups.py  heat_capacity.py  hydrate.py  identifiers.py  interaction_parameters.py  interface.py  joback.py  law.py  lennard_jones.py  miscdata.py  mixture.py  mosced.py  (+34 more)
thermo/Critical Properties/: Appendix to PSRK Revision 4.tsv  IUPACOrganicCriticalProps.csv  IUPACOrganicCriticalProps.tsv  Mathews1972InorganicCriticalProps.tsv  PassutDanner1973.tsv  Yaws Collection.csv
thermo/Critical_Properties/: CRCCriticalOrganics.tsv
thermo/Density/: COSTALD Parameters.csv  CRC Inorganics densties of molten compounds and salts.tsv  CRC Virial polynomials.csv  CRC_Liquid_Inorganic_Constant_Densities.tsv  (+4 more)
(+279 files in other folders)
